--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
       <li>Head over to w3schools and look at how to make a form with a submit button</li>
     </ul>
   
-    
+    <div> Note: I mentioned to learn the br tag, but before you use it think hard, you probably want to do that type of work with CSS.</div>
     
   </body>
 </html>
